--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.5",
     "@astrojs/netlify": "^5.1.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/roboto": "^5.0.12",
     "@fontsource/roboto-mono": "^5.0.16",
     "astro": "^4.4.3",
     "tailwindcss": "^3.4.1",
