--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.5",
-    "@astrojs/netlify": "^5.1.2",
+    "@astrojs/check": "^0.5.10",
+    "@astrojs/netlify": "^5.2.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@auth/core": "^0.18.6",
     "@fontsource/roboto": "^5.0.12",
-    "@fontsource/roboto-mono": "^5.0.16",
-    "astro": "^4.4.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "@fontsource/roboto-mono": "^5.0.17",
+    "astro": "^4.5.16",
+    "d3": "^7.9.0",
+    "express": "^4.19.2",
+    "js-cookie": "^3.0.5",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.4"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
